# tarui2-exe

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/capabilities/: default.json
workflows/: build.yml
