[package]
name = "bat_r"
version = "1.0.0"
description = "BAT_R - Batch script manager"
authors = ["you"]
edition = "2021"
resolver = "2"

[[bin]]
name = "bat_r"
path = "main.rs"

[build-dependencies]
tauri-build = "2.10.0"

[dependencies]
tauri = "2.10.0"
tauri-plugin-shell = "2.10.0"
tauri-plugin-fs = "2.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
