[package]
name = "bat_r"
version = "1.0.0"
description = "BAT_R - Batch script manager"
authors = ["you"]
edition = "2021"
resolver = "2"

[[bin]]
name = "bat_r"
path = "main.rs"

[build-dependencies]
tauri-build = "2.5.1"

[dependencies]
tauri = "2.5.1"
tauri-plugin-shell = "2.5.1"
tauri-plugin-fs = "2.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.36"
